<resources>
    <string name="app_name">Music Player</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="logo">Logo</string>
    <string name="tracks">Tracks</string>
    <string name="playlist">Playlist</string>
    <string name="artists">Artists</string>
    <string name="favorites">Favorites</string>
    <string name="album_cover">Album Cover</string>
    <string name="shuffle">Shuffle</string>
    <string name="loop">Loop</string>
    <string name="next_track">Next Track</string>
    <string name="previous_track">Previous Track</string>
    <string name="play_pause_button">Play Pause Button</string>
    <string name="albums">Albums</string>
    <string name="search_in_tracks_list">Search In Tracks List</string>
    <string name="search_in_artists_list">Search In Artists List</string>
    <string name="search">Search</string>
    <string name="all_tracks">All Tracks</string>
    <string name="loop_current_track">Loop Current Track</string>
    <string name="placeholder_artist">Unknown Artist</string>
    <string name="placeholder_album">Unknown Album</string>
    <string name="music_placeholder">Music</string>
    <string name="description_album_cover">Album Cover For %s</string>
    <string name="play_tracks_from_album">Play Tracks From %s</string>
    <string name="channel_id">Music Player</string>
    <string name="now_playing">Now Playing</string>
    <string name="set_favorite">Set %s as Favorite</string>
    <string name="close_player_view">Close Player View</string>
    <string name="album_by">Album by %s</string>
    <string name="playing_from">PLAYING FROM %s</string>
    <string name="playing_tracks_by">PLAYING TRACKS BY</string>
    <string name="tracks_count">%d tracks</string>
    <string name="one_track">%d track</string>
    <string name="favorite_tracks">Favorite tracks</string>
    <string name="player_playing_name">%s…</string>
    <string name="delete_from_favorite_tracks">Delete from Favorite\ntracks?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="no_favorites_tracks_or_albums">No favorite tracks\nor albums</string>
    <string name="scroll_indicator_text">#\nA\nB\nC\nD\nE\nF\nG\nH\nI\nJ\nK\nL\nM\nN\nO\nP\nQ\nR\nS\nT\nU\nV\nW\nX\nY\nZ</string>
</resources>