<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/aboveBackground"
    android:padding="10dp" >

    <TextView
        android:id="@+id/delete_info"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_from_favorite_tracks"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Delete from Favorite\ntracks"/>

    <TextView
        android:id="@+id/track_name"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textAlignment="center"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/delete_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Can't Stop"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@drawable/round_button"
        android:gravity="center"
        android:text="@string/delete"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_marginTop="44dp"
        app:layout_constraintWidth_percent="0.3"
        app:layout_constraintTop_toBottomOf="@id/track_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:gravity="center"
        android:backgroundTint="@android:color/transparent"
        android:stateListAnimator="@null"
        android:text="@string/cancel"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintTop_toBottomOf="@id/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>
